feat: Introduce wholesaler management features and enhance existing models
- Added a new Wholesaler model with fields for name, phone, email, address, and store ID, including validation and indexing for efficient querying.
- Implemented CRUD operations for wholesalers, including routes for creating, retrieving, updating, and deleting wholesalers.
- Enhanced existing models (AuditLog, Product, etc.) to accommodate wholesaler-related data, including updates to resource types and relationships.
- Updated package.json and package-lock.json to include new dependencies for email notifications and Excel/PDF exports.
- Improved error handling and logging across wholesaler-related services for better debugging and monitoring.
- Introduced email service for sending low stock alerts to wholesalers, enhancing communication and inventory management.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,6 +45,8 @@
     "node_modules",
     "dist",
     "**/*.test.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "src/scripts/**/*",
+    "src/tests/**/*"
   ]
 }
