--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "npm run build && nodemon dist/index.js",
-    "build": "tsc",
+    "build": "npx --package=typescript tsc",
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -55,6 +55,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
@@ -71,10 +72,12 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
+    "nodemailer": "^6.9.7",
+    "pdfkit": "^0.14.0",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
-    "sharp": "^0.34.4",
+    "sharp": "^0.34.5",
     "socket.io": "^4.7.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
@@ -94,6 +97,8 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.9.0",
+    "@types/nodemailer": "^6.4.14",
+    "@types/pdfkit": "^0.17.3",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^2.0.16",
     "@types/swagger-jsdoc": "^6.0.4",
